Lives, Game Over screen, Alien grid rebuild
Trying to clear the canvas when a life is lost, and then rebuild the
alien grid from where they left off.

--- a/Space Invaders/Space Invaders.csproj
+++ b/Space Invaders/Space Invaders.csproj
@@ -94,6 +94,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Assets\Sprites\icon.psd" />
+    <Content Include="Fonts\space_invaders.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
