--- a/Space Invaders/Space Invaders.csproj
+++ b/Space Invaders/Space Invaders.csproj
@@ -102,6 +102,11 @@
     <Content Include="Assets\BadgeLogo.scale-150.png" />
     <Content Include="Assets\BadgeLogo.scale-200.png" />
     <Content Include="Assets\BadgeLogo.scale-400.png" />
+    <Content Include="Assets\Sprites\dube.jpg" />
+    <Content Include="Assets\Sprites\leftarrow.png" />
+    <Content Include="Assets\Sprites\matt.jpg" />
+    <Content Include="Assets\Sprites\rightarrow.png" />
+    <Content Include="Assets\Sprites\spacebar.png" />
     <Content Include="Assets\SplashScreen.scale-100.png" />
     <Content Include="Assets\SplashScreen.scale-125.png" />
     <Content Include="Assets\SplashScreen.scale-150.png" />
@@ -135,6 +140,7 @@
     <Content Include="Assets\StoreLogo.scale-150.png" />
     <Content Include="Assets\StoreLogo.scale-200.png" />
     <Content Include="Assets\StoreLogo.scale-400.png" />
+    <Content Include="Assets\Sprites\uparrow.png" />
     <Content Include="Assets\Wide310x150Logo.scale-100.png" />
     <Content Include="Assets\Wide310x150Logo.scale-125.png" />
     <Content Include="Assets\Wide310x150Logo.scale-150.png" />
